# DataMininghackathon

./: .gitignore  PHASE3_RAW_DATA_REPRO.md  README.md  Snakefile  config.yaml  inspect_data.py  pyproject.toml  read_csv_files.py  submit.py
.githooks/: pre-commit
.github/workflows/: manual-pipeline.yml
config/sweeps/: README.md  config_1.yaml  config_10.yaml  config_11.yaml  config_12.yaml  config_13.yaml  config_2.yaml  (+7 more)
docs/: challenge2-core-demand-prediction.md  customer_test.md  features_per_sku.md  glossary.md  les_cs.md  modelling.md  nace_codes.md  next_optimism_findings.md  notes.md  online_scores_schemas.md  plis_training.md  scoring.md  submission_tuning_sweep.md
outputs/: submission.csv
scripts/: run_level2_threshold_sweep.py  run_threshold_sweep.py
src/: analyze_submission_tuning.py  archive_score_run.py  build_customer_meta.py  build_features.py  check_vk_price_stability.py  clean_plis.py  engineer_features.py  engineer_features_derived.py  engineer_features_raw.py  feature_analysis.py  feature_selection.py  generate_candidates.py  generate_exploration_plots.py  generate_trending_classes.py  merge_portfolio_hybrid.py  merge_portfolios.py  prepare_split_customer_meta.py  read_csv_files.py  run_metadata.py  sanitize_features_raw.py  score_submission.py  select_best_score_run.py  select_latest_online_run.py  select_portfolio.py  split_plis_training_validation.py  submit.py  suggest_features.py  train_baseline.py  train_lgbm.py  upload_submission.py  write_run_metadata.py  write_submission.py  write_submission_warm.py
tests/: conftest.py  test_submit.py
(+353 files in other folders)
