[project]
name = "challenge2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "lightgbm",
    "matplotlib",
    "pandas",
    "playwright",
    "pyarrow",
    "python-dotenv>=1.2.2",
    "seaborn",
    "snakemake",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-p no:launch_pytest"
